objects/UPC_Account_Interfaces__c.object
<CustomObject>
    <description>Used to map all account interfaces that will be integrated with a Salesforce Account</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Interfaces</relationshipLabel>
        <relationshipName>Account_Interfaces</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Interface__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,  TEXT(UPC_System__c), &quot;_self&quot; )</formula>
        <label>Interface</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Address_Verified_Flag__c</fullName>
        <formula>IF(UPC_Address_Verified__c, 
IMAGE(&apos;/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20), 
IMAGE(&apos;/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20))</formula>
        <label>Address Verified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Address_Verified__c</fullName>
        <formula>AND(
/* Street and City must be 100% perfect */
 Account__r.BillingStreet  =  UPC_Street__c ,
Account__r.BillingCity = UPC_City__c,

/* Taifun does not deliver the State, so only compare State if not Taifun */
Account__r.BillingState = IF(ISPICKVAL(UPC_System__c, &quot;Taifun&quot;),Account__r.BillingState,UPC_State_Province__c),

/* Taifun postcode is 4 or 6 digit for CH, compare first 4 digits only for CH */
Account__r.BillingPostalCode = IF(AND(ISPICKVAL(UPC_System__c, &quot;Taifun&quot;),OR(UPC_Country__c == &quot;CH&quot;,UPC_Country__c == &quot;Switzerland&quot;)),LEFT(UPC_Zip_Postal_Code__c,4),UPC_Zip_Postal_Code__c),

/* Country can be 2-digit ISO country code, or English name. Allow both */
OR(UPC_Country__c == TEXT(Account__r.BillingCountryCode),Account__r.BillingCountry = UPC_Country__c)
)</formula>
        <label>Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Address__c</fullName>
        <formula>IF( ISBLANK( UPC_Street__c ) , &apos;&apos;, UPC_Street__c +&apos;,&apos;) + 
IF( ISBLANK( UPC_Zip_Postal_Code__c ) , &apos;&apos;, &apos; &apos; + UPC_Zip_Postal_Code__c +&apos; &apos;)+
IF( ISBLANK( UPC_City__c ) , &apos;&apos;, &apos; &apos; + UPC_City__c  +&apos;,&apos;) +
IF( ISBLANK( UPC_State_Province__c ) , &apos;&apos;, &apos; &apos; + UPC_State_Province__c +&apos;,&apos;)+  
IF( ISBLANK( UPC_Country__c ) , &apos;&apos;, &apos; &apos; + UPC_Country__c)</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Business_Mobile_Service_ID__c</fullName>
        <description>CS - Business mobile service Id copied over from case when it is closed</description>
        <label>Business Mobile Service ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Country__c</fullName>
        <description>Contains the Country from the foreign system. Ensure only 2-digit ISO code or English name is saved, otherwise the Address Verification formulas will not work</description>
        <inlineHelpText>Must contain 2-digit ISO country code or English country name. Examples: CH, Switzerland</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_External_ID__c</fullName>
        <description>External Account ID</description>
        <externalId>true</externalId>
        <inlineHelpText>External Account ID</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ID__c</fullName>
        <description>Used to identify the record ID in the legacy system</description>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Last_Verification_Date__c</fullName>
        <description>Used to store the last verification date.</description>
        <label>Last Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_Name_Verified_Flag__c</fullName>
        <formula>IF(UPC_Name_Verified__c,
IMAGE(&apos;/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20),
IMAGE(&apos;/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20))</formula>
        <label>Name Verified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Name_Verified__c</fullName>
        <formula>UPC_System_Account_Name__c = Account__r.Name</formula>
        <label>Name Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Owner_Verified_Flag__c</fullName>
        <formula>IF(UPC_Owner_Verified__c, 
IMAGE(&apos;/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20), 
IMAGE(&apos;/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20))</formula>
        <label>Owner Verified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Owner_Verified__c</fullName>
        <formula>UPC_Owner__c = Account__r.Owner.FirstName&amp;&quot; &quot;&amp; Account__r.Owner.LastName</formula>
        <label>Owner Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Primary_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to set the primary account when more then one is found in the legacy systems.</description>
        <label>Primary Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Service_Taifun_Sap_ID__c</fullName>
        <formula>UPC_Service__r.UPC_Taifun_SAP_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taifun Sap ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Account Interfaces</relationshipLabel>
        <relationshipName>Account_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_State_Province__c</fullName>
        <description>Contains the State from the foreign system. Ensure only State Code is saved, otherwise the Address Verification formulas will not work</description>
        <inlineHelpText>Must contain only state code. Examples: GE, VD, ZH, ZG</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_System_Account_AdditionalName__c</fullName>
        <label>System Account Additional Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_System_Account_Name__c</fullName>
        <description>Used to get the Account Name from the Interface.</description>
        <label>System Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_System__c</fullName>
        <description>Used to identify the legacy system that is connected to an account.</description>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACC</fullName>
                </value>
                <value>
                    <fullName>AZD-Direct</fullName>
                </value>
                <value>
                    <fullName>Permaleads</fullName>
                </value>
                <value>
                    <fullName>Profondia</fullName>
                </value>
                <value>
                    <fullName>SuperOffice</fullName>
                </value>
                <value>
                    <fullName>Taifun</fullName>
                </value>
                <value>
                    <fullName>Zefix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Type__c</fullName>
        <description>Used to identify the Type in the Legacy System.</description>
        <label>System Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Register</fullName>
                </value>
                <value>
                    <fullName>Prospect Data Source</fullName>
                </value>
                <value>
                    <fullName>Debitor</fullName>
                </value>
                <value>
                    <fullName>Creditor</fullName>
                </value>
                <value>
                    <fullName>Partner Network</fullName>
                </value>
                <value>
                    <fullName>Business Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Account Interface</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INT-{000000}</displayFormat>
        <label>Account Interfaces Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Interfaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>